Added the feature to sort the Candy list items

--- a/MyDeliciousCandiesv2/app/src/main/res/layout/activity_main.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:contentDescription="@string/app_name"
+        app:tabTextColor="@color/cardview_dark_background"
+        app:tabBackground="@drawable/tab_color_selected"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/viewPager" />
