--- a/MyDeliciousCandiesv2/app/src/main/res/layout/candy_list_fragment.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/layout/candy_list_fragment.xml
@@ -1,7 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linearLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/radioGroupFilter">
+
+        <RadioButton
+            android:id="@+id/radioFilterName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Filtrar por Nombre" />
+
+        <RadioButton
+            android:id="@+id/radioFilterSweetness"
+            android:layout_width="148dp"
+            android:layout_height="wrap_content"
+            android:text="Filtrar por Dulzor" />
+
+        <Button
+            android:id="@+id/btnFilter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Filtrar" />
+    </RadioGroup>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnClearRadio"
+        android:text="BorrarSeleccion"/>
+
+    <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 </androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
