--- a/MyDeliciousCandiesv2/app/src/main/res/values/colors.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="tabSelected">#FF64b5f6</color>
+    <color name="tabNoSelected">#2196F3</color>
 </resources>
