--- a/MyDeliciousCandiesv2/app/src/main/res/layout/candy_item_adapter.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/layout/candy_item_adapter.xml
@@ -22,7 +22,7 @@
         android:layout_width="156dp"
         android:layout_height="28dp"
         android:layout_marginStart="12dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:layout_toEndOf="@id/imageView"
         android:text="Nombre"
         android:textSize="20sp"
@@ -70,7 +70,7 @@
         android:layout_height="23dp"
         android:layout_marginStart="12dp"
         android:layout_marginEnd="168dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="12dp"
         android:text="Nivel de dulzor "
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,11 +82,11 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="125dp"
         android:layout_height="22dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="64dp"
         android:max="5"
         android:min="0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.203"
+        app:layout_constraintHorizontal_bias="0.241"
         app:layout_constraintStart_toEndOf="@+id/txtDulzor"
         app:layout_constraintTop_toBottomOf="@+id/checkboxFav" />
 
@@ -100,7 +100,8 @@
         android:text="Tipo : "
         app:layout_constraintBottom_toTopOf="@+id/txtDulzor"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/txtFabricante" />
+        app:layout_constraintTop_toBottomOf="@+id/txtFabricante"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnModify"
@@ -112,5 +113,18 @@
         android:textSize="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkboxFav" />
+
+    <TextView
+        android:id="@+id/txtWeb"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="4dp"
+        android:clickable="true"
+        android:text="Web"
+        app:layout_constraintBottom_toTopOf="@+id/txtDulzor"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/txtTipo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
