--- a/MyDeliciousCandiesv2/app/src/main/res/layout/candy_list_fragment.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/layout/candy_list_fragment.xml
@@ -33,7 +33,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnClearRadio"
-        android:text="BorrarSeleccion"/>
+        android:textSize="13dp"
+        android:text="BorrarSeleccion y QuitarFiltro"/>
 
     <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerView"
