--- a/PracticaIMCv2/app/src/main/res/layout/activity_main.xml
+++ b/PracticaIMCv2/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,8 @@
         android:layout_height="48dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="@string/m"
-        android:autofillHints="@string/m"
+        android:hint="@string/cm"
+        android:autofillHints="@string/cm"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.168"
