--- a/MyDeliciousCandiesv2/app/src/main/res/layout/candy_item_adapter.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/layout/candy_item_adapter.xml
@@ -52,8 +52,8 @@
 
     <CheckBox
         android:id="@+id/checkboxFav"
-        android:layout_width="96dp"
-        android:layout_height="48dp"
+        android:layout_width="100dp"
+        android:layout_height="33dp"
         android:layout_marginStart="45dp"
         android:layout_marginEnd="16dp"
         android:text="Favoritos"
@@ -82,11 +82,11 @@
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="125dp"
         android:layout_height="22dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="76dp"
         android:max="5"
         android:min="0"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.241"
+        app:layout_constraintHorizontal_bias="0.145"
         app:layout_constraintStart_toEndOf="@+id/txtDulzor"
         app:layout_constraintTop_toBottomOf="@+id/checkboxFav" />
 
@@ -104,10 +104,21 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="73dp"
+        android:layout_height="37dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:text="Delete"
+        android:textSize="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkboxFav" />
+
+    <Button
         android:id="@+id/btnModify"
         android:layout_width="98dp"
-        android:layout_height="38dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         android:text="Modificar"
         android:textSize="10dp"
