--- a/MyDeliciousCandiesv2/app/src/main/res/layout/candy_list_fragment.xml
+++ b/MyDeliciousCandiesv2/app/src/main/res/layout/candy_list_fragment.xml
@@ -23,18 +23,34 @@
             android:layout_height="wrap_content"
             android:text="Filtrar por Dulzor" />
 
+        <RadioButton
+            android:id="@+id/radioFilterFav"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Mostrar favoritos" />
+
+    </RadioGroup>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnClearRadio"
+            android:layout_width="303dp"
+            android:layout_height="wrap_content"
+            android:text="BorrarSeleccion y QuitarFiltro"
+            android:textSize="13dp" />
+
         <Button
             android:id="@+id/btnFilter"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="Filtrar" />
-    </RadioGroup>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnClearRadio"
-        android:textSize="13dp"
-        android:text="BorrarSeleccion y QuitarFiltro"/>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerView"
