--- a/Menu2/app/src/main/res/layout/activity_main.xml
+++ b/Menu2/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 android:layout_height="?actionBarSize" />
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.viewpager2.widget.ViewPager2
+        <FrameLayout
             android:id="@+id/myViewPager2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
